examples/minimal/undefined/UB-CID2-bad.c
int main(void){
      int f();
      f;
      return 0;
}
